@@ -33,6 +33,7 @@
 /* number of motion synched DIO's supported (increase this value to 
    suit your needs), make sure to increase EMC_MAX_DIO aswell (emcglb.h) */
 #define EMCMOT_MAX_DIO 4
+#define EMCMOT_MAX_AIO 4
 
 #define EMCMOT_ERROR_NUM 32	/* how many errors we can queue */
 #define EMCMOT_ERROR_LEN 256	/* how long error string can be */
