@@ -28,6 +28,7 @@ extern "C" {
 #define EMC_AXIS_MAX 9
 
 #define EMC_MAX_DIO 4
+#define EMC_MAX_AIO 4
 
     extern char EMC_INIFILE[LINELEN];
 
